fix: fixed overflowx

--- a/src/tailwind-output.css
+++ b/src/tailwind-output.css
@@ -66,6 +66,7 @@ body {
   /* 1 */
   line-height: inherit;
   /* 2 */
+  overflow-x: hidden;
 }
 
 /*
